src/objects/BusinessProcessParameter__c.object
<CustomObject>
    <fields>
        <fullName>BusinessprocessId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessprocessId</label>
        <referenceTo>Businessprocess__c</referenceTo>
        <relationshipLabel>BusinessProcessParameters</relationshipLabel>
        <relationshipName>BusinessProcessParameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPotential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPotential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueNumber__c</fullName>
        <label>ValueNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>BusinessProcessParameter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BusinessProcessParameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>